feat: adding keycloak adapter and mock

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+internal/keycloak/playground_test.go
+
 # Created by https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,goland+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,visualstudiocode,goland+all
 
