--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 internal/keycloak/playground_test.go
 sandbox/
+.env
 
 # Created by https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,goland+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,visualstudiocode,goland+all
