--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.21
+          go-version: 1.23
       - name: check go mod tidy
         run: |
           go mod tidy
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.21
+          go-version: 1.23
       - name: run golang tests
         run: go test ./...
 
@@ -38,6 +38,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.21
+          go-version: 1.23
       - name: build cli
-        run: go build -o broke main.go
+        run: go build -o broke cmd/broke/main.go
